
Panneau d'affichage:
- Possibilité de déposer un message pour les professeurs principaux.

Général:
- Possibilité de prendre en compte un secure/proxy.php pour file_get_contents()
- Automatisation du changement de PP et de CPE lors du changement de classe.

AID :
Si l'AID autorise le multi-inscription, on peut choisir de limiter aux inscrits à une autre AID de la même catégorie :
Exemple :
En administrateur, on crée une "catégorie d'AID" → 'Association Sportive'
   On coche Inscriptions multiples :
En administrateur ou gestionnaire de la catégorie d'AID, on crée une AID → Licenciers
   On saisie tous les membres de l'association sportive
En administrateur ou gestionnaire de la catégorie d'AID, on crée de nouvelles AID en cochant Sous-groupe d'une autre AID puis en choisissant Licenciers
   Lors de la saisie des membres, seuls les membres de Licenciers sont proposés


Gepi-1.6.7 (24/08/2015)
===========================
Librairies:
- Ajout de PHPMailer (https://github.com/PHPMailer/PHPMailer)

AID:
- Possibilité de visualiser en popup les élèves d'un AID depuis Mes_listes.
- Possibilité d'effectuer un export CSV depuis Mes_listes_CSV.
- Possibilité d'effectuer une impression PDF des listes d'élèves.

Abs2:
- Possibilité d'associer automatiquement des saisies (saisir_groupe.php) à un traitement englobant.

Absence et remplacement de professeurs:
- Possibilité de ne pas afficher de case à cocher pour ne pas proposer de remplacer des enseignements qui ne correspondent pas à des groupes-classes.
- Possibilité d'autoriser les professeurs à refuser d'apparaître dans la liste des candidats potentiels pour effectuer un remplacement.

Bulletins:
- Possibilité de définir un autre préfixe que "Bulletin du " précédant le nom de période pour les bulletins.
- Ajout d'un droit PeutDonnerAccesBullAppPeriodeCloseScol pour pouvoir restreindre l'accès scolarité à l'autorisation exceptionnelle de saisie/correction d'appréciations des bulletins.