@@ -35,7 +35,7 @@ Général:
 - Automatisation du changement de PP et de CPE lors du changement de classe.
 
 AID :
-Si l'AID autorise le multi-inscription, on peut choisir de limiter aux inscrits à une autre AID de la même catégorie :
+- Si l'AID autorise le multi-inscription, on peut choisir de limiter aux inscrits à une autre AID de la même catégorie :
 Exemple :
 En administrateur, on crée une "catégorie d'AID" → 'Association Sportive'
    On coche Inscriptions multiples :
@@ -43,6 +43,7 @@ En administrateur ou gestionnaire de la catégorie d'AID, on crée une AID → L
    On saisie tous les membres de l'association sportive
 En administrateur ou gestionnaire de la catégorie d'AID, on crée de nouvelles AID en cochant Sous-groupe d'une autre AID puis en choisissant Licenciers
    Lors de la saisie des membres, seuls les membres de Licenciers sont proposés
+- Si le droit est ouvert, un élève peut s'inscrire dans une AID
 
 
 Gepi-1.6.7 (24/08/2015)
